<resources>
    <string name="app_name">RMC Frontend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_listings">Listings</string>
    <string name="menu_map">Map</string>
    <string name="menu_user">User</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="geen_autos_gevonden">Geen autos gevonden</string>
    <string name="car_image" />
    <string name="make_model">Make Model</string>
    <string name="year_color">Year • Color</string>
    <string name="price_value">€ ...</string>
    <string name="edit_car">Bewerken</string>
    <string name="logout">Logout</string>

    <string name="user_settings">User settings</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="delete_account">Disable account</string>
    <string name="confirm_disable_title">Disable account</string>
    <string name="confirm_disable_message">Are you sure you want to disable your account? You will not be able to log in until it is re-enabled.</string>
    <string name="cancel">Cancel</string>
    <string name="disable">Disable</string>

    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
</resources>