<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_car_image"
            android:layout_width="88dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/car_image" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_car_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_model"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/item_car_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_color"
                android:textSize="13sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/item_car_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_value"
                android:textStyle="bold"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
