<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_transform">

    <!-- Cars / Listings -->
    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.rmcfrontend.ui.cars.CarsFragment"
        android:label="@string/menu_listings"
        tools:layout="@layout/fragment_cars">
    </fragment>

    <!-- Car Details -->
    <fragment
        android:id="@+id/carDetailsFragment"
        android:name="com.example.rmcfrontend.ui.cars.CarDetailsFragment"
        android:label="Car Details"
        tools:layout="@layout/fragment_car_details">

        <argument
            android:name="carId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/editCarFragment"
        android:name="com.example.rmcfrontend.ui.cars.EditCarFragment"
        android:label="Edit Car"
        tools:layout="@layout/fragment_edit_car">

        <argument
            android:name="carId"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/createCarFragment"
        android:name="com.example.rmcfrontend.ui.cars.CreateCarFragment"
        android:label="Create Car"
        tools:layout="@layout/fragment_create_car" />

    <!-- Map -->
    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.rmcfrontend.ui.reflow.ReflowFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_reflow" />

    <!-- User -->
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.rmcfrontend.ui.settings.SettingsFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_settings" />

    <!-- Settings -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.rmcfrontend.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
